--- a/Api/BookKeeper/BookKeeper.Api/appsettings.json
+++ b/Api/BookKeeper/BookKeeper.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BookKeeping": "Data Source=DESKTOP-FKRPOA2\\SQLEXPRESS;Initial Catalog=BookKeeper;Integrated Security=True; TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
