--- a/Api/BookKeeper/BookKeeper.Api/BookKeeper.Api.csproj
+++ b/Api/BookKeeper/BookKeeper.Api/BookKeeper.Api.csproj
@@ -29,4 +29,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookKeeper.DataStore\BookKeeper.DataStore.csproj" />
+  </ItemGroup>
+
 </Project>
