--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@
 /Api/BookKeeper/BookKeeper.Api/obj/Debug/net6.0
 /Api/BookKeeper/BookKeeper.Api/obj
 /Api/BookKeeper/.vs/BookKeeper/FileContentIndex
+/Api/BookKeeper/BookKeeper.Service/bin/Debug/net6.0
+/Api/BookKeeper/BookKeeper.Models/bin/Debug/net6.0
+/Api/BookKeeper/BookKeeper.DTO/bin/Debug/net6.0
+/Api/BookKeeper/BookKeeper.DataStore/bin/Debug/net6.0
+/Api/BookKeeper/BookKeeper.Api/bin/Debug/net6.0
