--- a/Api/BookKeeper/BookKeeper.Api/BookKeeper.Api.csproj
+++ b/Api/BookKeeper/BookKeeper.Api/BookKeeper.Api.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BookKeeper.DataStore\BookKeeper.DataStore.csproj" />
+    <ProjectReference Include="..\BookKeeper.Service\BookKeeper.Service.csproj" />
   </ItemGroup>
 
 </Project>
