--- a/Api/BookKeeper/BookKeeper.Service/BookKeeper.Service.csproj
+++ b/Api/BookKeeper/BookKeeper.Service/BookKeeper.Service.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookKeeper.DataStore\BookKeeper.DataStore.csproj" />
+  </ItemGroup>
+
 </Project>
