--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ﻿################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
-
+/Api/BookKeeper/.vs/DesigntimeBuild
 /Api/BookKeeper/.vs/BookKeeper/v17
 /Api/BookKeeper/BookKeeper.Service/obj/Debug/net6.0
 /Api/BookKeeper/BookKeeper.Service/obj
