--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /Api/BookKeeper/BookKeeper.DTO/bin/Debug/net6.0
 /Api/BookKeeper/BookKeeper.DataStore/bin/Debug/net6.0
 /Api/BookKeeper/BookKeeper.Api/bin/Debug/net6.0
+/Api/BookKeeper/.vs/BookKeeper/DesignTimeBuild/.dtbcache.v2
+/Api/BookKeeper/.vs/BookKeeper/DesignTimeBuild/.dtbcache.v2
