--- a/Api/BookKeeper/BookKeeper.Service/BookKeeper.Service.csproj
+++ b/Api/BookKeeper/BookKeeper.Service/BookKeeper.Service.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BookKeeper.DataStore\BookKeeper.DataStore.csproj" />
+    <ProjectReference Include="..\BookKeeper.DTO\BookKeeper.DTO.csproj" />
   </ItemGroup>
 
 </Project>
