cors and ui intgration

--- a/Api/BookKeeper/BookKeeper.Api/appsettings.json
+++ b/Api/BookKeeper/BookKeeper.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BookKeeping": "Data Source=DESKTOP-FKRPOA2\\SQLEXPRESS;Initial Catalog=BookKeeper;Integrated Security=True; TrustServerCertificate=True"
+    "BookKeeping": "Data Source=LAPTOP-G23DL8VB\\SQLEXPRESS01;Initial Catalog=BookKeeper;Integrated Security=True; TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
