--- a/Web/book-keepe-client/package.json
+++ b/Web/book-keepe-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "book-keepe-client",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,17 +11,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.0.0",
-    "@angular/cdk": "^16.0.4",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
-    "@angular/material": "^16.0.4",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^15.0.1",
-
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -30,7 +26,6 @@
     "@angular-devkit/build-angular": "^16.0.5",
     "@angular/cli": "~16.0.5",
     "@angular/compiler-cli": "^16.0.0",
-
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -40,4 +35,4 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~5.0.2"
   }
-
+}
